--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Cats Album</string>
+    <string name="login">Login</string>
+    <string name="or">or</string>
+    <string name="guest">Guest</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="register">Register</string>
 </resources>
